<resources>
    <string name="app_name">The Kitchen Menu</string>
    <string name="cd_picture_of_product">A picture of the product</string>
    <string name="cd_add_image_from_camera">Select to add image from camera</string>
    <string name="cd_add_image_from_gallery">Click to add image from gallery</string>
    <string name="cd_done">Click when done editing</string>
    <string name="cd_use">Click to use</string>
    <string name="cd_delete_product">Click to delete the current product</string>
    <string name="cd_action_edit_product">Click to edit the current product</string>
    <string name="cd_add_image">Click to add a picture</string>
    <string name="cd_rotate_image">Click to rotate picture</string>
    <string name="cd_add_product">Add a product</string>
    <string name="cd_brand_logo">The kitchen menu brand logo</string>
    <string name="cd_picture_of_ingredient">A image of the ingredient to be used with this recipe</string>
    <string name="label_description">Manufacturer or retailers exact description</string>
    <string name="hint_description">eg. Lurpak spreadable lighter, unsalted</string>
    <string name="label_shopping_list_item">What do you call this item on your shopping list?</string>
    <string name="hint_shopping_list_item">eg. Butter</string>
    <string name="label_retailer">Retailer</string>
    <string name="hint_retailer">Where do you buy it?</string>
    <string name="label_location_room">Storage room</string>
    <string name="hint_location_room">What room do you keep it?</string>
    <string name="label_location_in_room">Where abouts?</string>
    <string name="hint_location_in_room">Where abouts in the room?</string>
    <string name="pack_size_label">Total %1$s</string>
    <string name="ingredient_size_label">Total %1$s</string>
    <string name="product_size_label">Item %1$s</string>
    <string name="pack_size_total_hint">How many %1$s?</string>
    <string name="item_size_hint">How many %1$s?</string>
    <string name="label_pack_size">Pack size</string>
    <string name="label_item_size">Item size</string>
    <string name="hint_pack_size">Weight/volume of pack</string>
    <string name="hint_item_size">Weight/volume of each item</string>
    <string name="unit_of_measure_label">Sold by</string>
    <string name="label_multi_pack">Multipack</string>
    <string name="label_number_of_packs">No of items</string>
    <string name="label_price">Price</string>
    <string name="hint_price">How much does it cost?</string>
    <string name="label_shelf_life">Shelf life</string>
    <string name="label_category">Category</string>
    <string name="label_quantity">Quantity</string>
    <string name="unit_of_measure_default">Please select</string>
    <string name="grams">g</string>
    <string name="kilograms">kg</string>
    <string name="ounces">oz</string>
    <string name="pounds">lb</string>
    <string name="pounds_and_ounces">lbs and oz</string>
    <string name="millilitres">ml</string>
    <string name="litres">litres</string>
    <string name="fluidOunce">fl oz</string>
    <string name="pints">pt</string>
    <string name="gallons">gal</string>
    <string name="each">each</string>
    <string name="piece">piece</string>
    <string name="whole">whole</string>
    <string name="part">part</string>
    <string name="items">items</string>
    <string name="teaspoon">tsp</string>
    <string name="tablespoon">Tbsp</string>
    <string name="mass">weight</string>
    <string name="volume">volume</string>
    <string name="count">count</string>
    <string name="sub_type_metric_mass">Metric weight</string>
    <string name="sub_type_imperial_mass">Imperial weight</string>
    <string name="sub_type_metric_volume">Metric volume</string>
    <string name="sub_type_imperial_volume">Imperial volume</string>
    <string name="sub_type_count">Count</string>
    <string name="header_mass_metric">Weight metric</string>
    <string name="header_mass_imperial">Weight imperial</string>
    <string name="header_volume_metric">Volume metric</string>
    <string name="header_volume_imperial">Volume imperial</string>
    <string name="header_count">Count</string>
    <string name="header_volume_imperial_spoon">Volume imperial</string>
    <string name="one_day">1 day</string>
    <string name="two_days">2 days</string>
    <string name="three_days">3 days</string>
    <string name="four_days">4 days</string>
    <string name="five_days">5 days</string>
    <string name="six_days">6 days</string>
    <string name="one_week">1 week</string>
    <string name="two_weeks">2 weeks</string>
    <string name="three_weeks">3 weeks</string>
    <string name="four_weeks">4 weeks</string>
    <string name="frozen">Frozen</string>
    <string name="dried">Dried</string>
    <string name="tin">Tin</string>
    <string name="jar">Jar</string>
    <string name="bottle">Bottle</string>
    <string name="category_default">Please select</string>
    <string name="food">Food</string>
    <string name="non_food">Non food</string>
    <string name="count_fraction_zero_value">None</string>
    <string name="one_tenth">1/10</string>
    <string name="one_fifth">1/5</string>
    <string name="three_tenths">3/10</string>
    <string name="two_fifths">2/5</string>
    <string name="half">1/2</string>
    <string name="three_fifths">3/5</string>
    <string name="seven_tenths">7/10</string>
    <string name="four_fifths">4/5</string>
    <string name="nine_tenths">9/10</string>
    <string name="one_quarter">1/4</string>
    <string name="three_quarters">3/4</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="sign_out">Sign out</string>
    <string name="activity_title_product_catalog">Product catalog</string>
    <string name="activity_title_product_detail">Product details</string>
    <string name="activity_title_view_product">Product viewer</string>
    <string name="activity_title_review_new_product">Review before post</string>
    <string name="activity_title_edit_product">Edit product</string>
    <string name="activity_title_add_new_product">Add new product</string>
    <string name="widget_product_title_latest_products">Latest products</string>
    <string name="activity_title_add_favorite_product">Add favorite</string>
    <string name="activity_title_edit_favorite_product">Edit favorite</string>
    <string name="activity_title_recipe_catalog">Recipe catalog</string>
    <string name="activity_title_add_new_recipe">Add new recipe</string>
    <string name="activity_title_edit_recipe">Edit recipe</string>
    <string name="activity_title_copy_recipe">Copy recipe</string>
    <string name="activity_title_image_cropper">TKM - Image Cropper</string>
    <string name="activity_title_add_new_ingredient">Add new ingredient</string>
    <string name="activity_title_edit_ingredient">Edit ingredient</string>
    <string name="activity_title_recipe_ingredient_editor">Recipe ingredient editor</string>
    <string name="activity_title_recipe_ingredient_list_activity">Recipe ingredients list</string>
    <string name="input_error_short_text_too_short">Too short, needs to be between 3 and 70 characters.</string>
    <string name="input_error_short_text_too_long">To long, needs to be between 3 and 70 characters.</string>
    <string name="input_error_long_text_too_short">Too short, needs to be between 3 and 70 characters.</string>
    <string name="input_error_long_text_too_long">To long, needs to be between 3 and 70 characters.</string>
    <string name="input_error_text_too_short">Too short for this field, text needs to be between %1$s and %2$s characters.</string>
    <string name="input_error_text_too_long">Too long for this field, text needs to be between %1$s and %2$s characters.</string>
    <string name="input_error_product_made_by_too_short">Manufacturer name too short, needs to be
        between 1 and 120 characters.</string>
    <string name="input_error_product_made_by_too_long">Manufacturer name too long, needs to be
        between 1 and 120 characters.</string>
    <string name="input_error_product_retailer_too_short">Retailer name too short, needs to be
        between 1 and 120 characters.</string>
    <string name="input_error_product_retailer_too_long">Retailer name too long, needs to be
        between 1 and 120 characters.</string>
    <string name="input_error_items_in_pack">Number of packs needs to be between %1$d and %2$d</string>
    <string name="input_error_product_pack_size">Pack size needs to be between 1g and 10kg</string>
    <string name="max_mass_exceeded_error">Weight must be under %1$.0f %2$s</string>
    <string name="input_error_pack_size">Total pack %1$s must not exceed %2$s%3$s. Pack %1$s
        must be between %4$s%5$s and %2$s%3$s. Minimum item %1$s is %4$s%5$s.</string>
    <string name="measurement_input_error">Please enter a value between %1$s%2$s and %3$s%4$s %5$s%6$s</string>
    <string name="input_error_product_loc_room_too_short">Storage room name too short, needs to be
        between 1 and 60 characters.</string>
    <string name="input_error_product_loc_room_too_long">Storage room name too long, needs to be
        between 1 and 60 characters.</string>
    <string name="input_error_product_loc_in_room_too_short">Location in room name too short, needs
        to be between 1 and 60 characters.</string>
    <string name="input_error_product_loc_in_room_too_long">Location in room name too long, needs
        to be between 1 and 60 characters.</string>
    <string name="input_error_recipe_title_too_short">Title too short, needs to be between 1 and 60
        characters.</string>
    <string name="input_error_recipe_title_too_long">Title too long, needs to be between 1 and 60
        characters.</string>
    <string name="input_error_recipe_description_too_long">Recipe description too long, needs to be
        between 1 and 120 characters</string>
    <string name="input_error_recipe_servings">Recipe must make between %1$d and %2$d
        servings.</string>
    <string name="input_error_recipe_sittings">Recipe must make between %1$d and %2$d
        sittings.</string>
    <string name="validation_error_unit_of_measure">Please select a modelValid
        unit of measure.</string>
    <string name="validation_error_shelf_life">Please select a
        modelValid shelf life.</string>
    <string name="validation_error_category">Please select a modelValid
        category.</string>
    <string name="input_error_product_pack_price">Pack price needs to be between 0.01 and 1000
    </string>
    <string name="activity_detail_product_error_incomplete_fields">Please ensure you have completed
        all fields.</string>
    <string name="recipe_description_label">Description</string>
    <string name="recipe_course">Course</string>
    <string name="recipe_select_all_that_apply">(tick all that apply)</string>
    <string name="recipe_category_spinner_label">Category</string>
    <string name="recipe_servings_label">Servings per sitting</string>
    <string name="recipe_sittings_label">No of sittings</string>
    <string name="recipe_total_servings_label">Total number of servings</string>
    <string name="recipe_prep_time_label">Prep time</string>
    <string name="recipe_cook_time_label">Cook time</string>
    <string name="recipe_hours_label">Hours</string>
    <string name="recipe_minutes_label">Minutes</string>
    <string name="input_error_recipe_prep_time_too_long">Prep time needs to be under 100 hours</string>
    <string name="input_error_recipe_cook_time_too_long">Cook time needs to be under 100 hours</string>
    <string name="nav_recipes">Recipes</string>
    <string name="nav_products">Products</string>
    <string name="meal_planner">Meal planner</string>
    <string name="nav_lists">Shopping lists</string>
    <string name="recipe_total_time_label">Total time</string>
</resources>