<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/nav_app"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_recipes"
            android:icon="@drawable/ic_restaurant"
            android:title="@string/nav_recipes"/>
        <item
            android:id="@+id/nav_products"
            android:icon="@drawable/ic_shopping_basket"
            android:title="@string/nav_products"/>
        <item
            android:id="@+id/nav_planner"
            android:icon="@drawable/ic_event"
            android:title="@string/meal_planner"/>
        <item
            android:id="@+id/nav_lists"
            android:icon="@drawable/ic_list"
            android:title="@string/nav_lists"/>
    </group>
    <group
        android:id="@+id/nav_settings"
        android:checkableBehavior="single">
        <item
            android:id="@+id/sign_out"
            android:icon="@drawable/ic_account_box"
            android:title="@string/sign_out"/>
    </group>
</menu>