<?xml version="1.0" encoding="utf-8"?>

<!-- Options menu for the ProductDetail Activity -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.ProductDetail">

    <item
        android:id="@+id/menu_product_editor_action_save"
        android:contentDescription="@string/cd_save_product"
        android:title="@string/action_save"
        android:icon="@drawable/ic_done_white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_product_editor_action_edit"
        android:contentDescription="@string/cd_action_edit_product"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_edit_white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_product_editor_action_delete"
        android:contentDescription="@string/cd_delete_product"
        android:title="@string/action_delete"
        android:icon="@drawable/ic_delete_white"
        app:showAsAction="never"/>
</menu>