<?xml version="1.0" encoding="utf-8"?><!-- Retailer field container -->
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/product_user_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:backgroundTint="@color/lightGrey"
        android:visibility="gone">

        <!--
                Visibility for this Layout is set to gone as it is turned on and off
                programmatically as and when required. If you wish to edit this layout delete this
                line from above 'android:visibility="gone"' and replace it when done
         -->

        <LinearLayout
            android:id="@+id/container_retailer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/EditableCategoryStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_retailer" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editable_retailer"
                    style="@style/EditableFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_retailer"
                    android:inputType="textCapWords" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/EditableCategoryStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_price" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editable_price"
                    style="@style/EditableFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_price"
                    android:inputType="numberDecimal" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_location_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/EditableCategoryStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_location_room" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editable_location_room"
                    style="@style/EditableFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_location_room"
                    android:inputType="textCapWords" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/container_location_in_room"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/EditableCategoryStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/label_location_in_room" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editable_location_in_room"
                    style="@style/EditableFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_location_in_room"
                    android:inputType="textCapWords" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>